--- a/main.css
+++ b/main.css
@@ -68,6 +68,13 @@ body{
   color: rgb(0, 0, 0);
 }
 
+.nom1{
+  margin: 5px;
+  font-size: 5px;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
+
 /***********
 PAGE para Fer
 ************/
